tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.diagnostic
diagnostic error code=T0001 family=type message="unknown trait bound 'MissingTrait'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari" bytes=117
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari" line=1 column=19 end_line=1 end_column=31 byte_start=18 byte_end=30 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari:1:19\n   |\n 1 | fn use_missing[T: MissingTrait](value: T) -> i64 {\n   |                   ^^^^^^^^^^^^"
